[package]
name = "mls-rs-crypto-awslc"
version = "0.12.0"
edition = "2021"
description = "AWS-LC based CryptoProvider for mls-rs"
homepage = "https://github.com/awslabs/mls-rs"
repository = "https://github.com/awslabs/mls-rs"
keywords = ["mls", "mls-rs", "aws-lc"]
license = "Apache-2.0 OR MIT"

[dependencies]
aws-lc-rs = { git = "https://github.com/aws/aws-lc-rs.git", features = ["unstable"] }
aws-lc-sys = { git = "https://github.com/aws/aws-lc-rs.git" }
mls-rs-core = { path = "../mls-rs-core", version = "0.19.0" }
mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.10.0" }
mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", version = "0.11.0" }
mls-rs-identity-x509 = { path = "../mls-rs-identity-x509", version = "0.12.0" }
thiserror = "1.0.40"
zeroize = { version = "1", features = ["zeroize_derive"] }
maybe-async = "0.2.10"

[dev-dependencies]
assert_matches = "1.5.0"
mls-rs-core = { path = "../mls-rs-core", version = "0.19.0", features = ["test_suite"] }
mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.10.0", features = ["test_utils"] }
futures-test = "0.3.25"

[target.'cfg(mls_build_async)'.dependencies]
async-trait = "0.1.74"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)'] }
