[package]
name = "mls-rs-crypto-awslc"
version = "0.20.1"
edition = "2021"
description = "AWS-LC based CryptoProvider for mls-rs"
homepage = "https://github.com/awslabs/mls-rs"
repository = "https://github.com/awslabs/mls-rs"
keywords = ["mls", "mls-rs", "aws-lc"]
license = "Apache-2.0 OR MIT"

[features]
fips = ["aws-lc-rs/fips", "dep:aws-lc-fips-sys"]
non-fips = ["aws-lc-rs/aws-lc-sys", "dep:aws-lc-sys"]
post-quantum = ["aws-lc-rs/unstable", "mls-rs-core/post-quantum"]
default = ["non-fips"]

[dependencies]
aws-lc-rs = { version = "=1.14.1", default-features = false, features = ["alloc"] }
aws-lc-sys = { version = "=0.32", optional = true }
aws-lc-fips-sys = { version = "=0.13", optional = true }
mls-rs-core = { path = "../mls-rs-core", version = "0.24.0" }
mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.18.0" }
mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", version = "0.19.0" }
mls-rs-identity-x509 = { path = "../mls-rs-identity-x509", version = "0.18.0" }
thiserror = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }
maybe-async = "0.2.10"

[dev-dependencies]
assert_matches = "1.5.0"
mls-rs-core = { path = "../mls-rs-core", version = "0.24.0", features = ["test_suite"] }
mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.18.0", features = ["test_utils"] }
futures-test = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

[target.'cfg(mls_build_async)'.dependencies]
async-trait = "0.1.74"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)'] }
