[package]
name = "mls-rs-crypto-cryptokit"
version = "0.9.0"
edition = "2021"
description = "CryptoKit based CryptoProvider for mls-rs"
homepage = "https://github.com/awslabs/mls-rs"
repository = "https://github.com/awslabs/mls-rs"
keywords = ["mls", "mls-rs", "CryptoKit"]
license = "Apache-2.0 OR MIT"

[build-dependencies]
# For parsing Swift outputs to build and link the bridge library
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# For test values, we can remove this once we use real mls-rs tests
hex-literal = "0.4.1"
assert_matches = "1.5.0"

[dependencies]
maybe-async = "0.2.10"
mls-rs-core = { path = "../mls-rs-core", default-features = false, version = "0.18.0" }
mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", default-features = false, version = "0.10.0" }

[target.'cfg(mls_build_async)'.dependencies]
async-trait = "0.1.74"
