[package]
name = "mls-rs-crypto-traits"
version = "0.6.0"
edition = "2021"

[features]
mock = ["std", "dep:mockall"]
std = ["mls-rs-core/std"]
default = ["std"]

[dependencies]
mls-rs-core = { path = "../mls-rs-core", version = "*", default-features = false }
mockall = { version = "^0.11", optional = true }
