[package]
name = "mls-rs-crypto-traits"
version = "0.10.0"
edition = "2021"
description = "Crypto traits required to create a CryptoProvider for mls-rs"
homepage = "https://github.com/awslabs/mls-rs"
repository = "https://github.com/awslabs/mls-rs"
keywords = ["mls", "mls-rs"]
license = "Apache-2.0 OR MIT"

[features]
mock = ["std", "dep:mockall"]
std = ["mls-rs-core/std"]
default = ["std"]

[dependencies]
mls-rs-core = { path = "../mls-rs-core", version = "0.18.0", default-features = false }
mockall = { version = "^0.11", optional = true }
maybe-async = "0.2.10"

[target.'cfg(mls_build_async)'.dependencies]
async-trait = "0.1.74"
