[package]
name = "mls-rs-ffi"
version = "0.7.0"
edition = "2021"
description = "Helper crate to generate FFI definitions for mls-rs"
homepage = "https://github.com/awslabs/mls-rs"
repository = "https://github.com/awslabs/mls-rs"
keywords = ["mls", "mls-rs", "ffi"]
license = "Apache-2.0 OR MIT"

[features]
default = ["openssl", "sqlcipher-bundled", "x509"]
openssl = ["mls-rs-crypto-openssl", "std"]
sqlcipher = ["sqlite", "mls-rs-provider-sqlite/sqlcipher"]
sqlcipher-bundled = ["sqlite", "mls-rs-provider-sqlite/sqlcipher-bundled"]
sqlite = ["std", "mls-rs-provider-sqlite/sqlite"]
sqlite-bundled = ["sqlite", "mls-rs-provider-sqlite/sqlite-bundled"]
std = ["mls-rs/std", "safer-ffi-gen/std"]
x509 = ["mls-rs-identity-x509"]

[dependencies]
mls-rs = { path = "../mls-rs", version = "0.42.0", features = ["ffi"] }
mls-rs-crypto-openssl = { path = "../mls-rs-crypto-openssl", version = "0.10.0", optional = true }
mls-rs-identity-x509 = { path = "../mls-rs-identity-x509", version = "0.12.0", optional = true }
mls-rs-provider-sqlite = { path = "../mls-rs-provider-sqlite", version = "0.13.1", default-features = false, optional = true }
safer-ffi = { version = "0.1.7", default-features = false }
safer-ffi-gen = { version = "0.9.2", default-features = false }
