[package]
name = "mls-rs-ffi"
version = "0.14.0"
edition = "2021"
description = "Helper crate to generate FFI definitions for mls-rs"
homepage = "https://github.com/awslabs/mls-rs"
repository = "https://github.com/awslabs/mls-rs"
keywords = ["mls", "mls-rs", "ffi"]
license = "Apache-2.0 OR MIT"

[features]
default = ["openssl", "sqlcipher-bundled", "x509"]
openssl = ["mls-rs-crypto-openssl", "std"]
sqlcipher = ["sqlite", "mls-rs-provider-sqlite/sqlcipher"]
sqlcipher-bundled = ["sqlite", "mls-rs-provider-sqlite/sqlcipher-bundled"]
sqlite = ["std", "mls-rs-provider-sqlite/sqlite"]
sqlite-bundled = ["sqlite", "mls-rs-provider-sqlite/sqlite-bundled"]
std = ["mls-rs/std", "safer-ffi-gen/std"]
x509 = ["mls-rs-identity-x509"]
psk = ["mls-rs/psk"]
by_ref_proposal = ["mls-rs/by_ref_proposal"]
custom_proposal = ["mls-rs/custom_proposal"]
private_message = ["mls-rs/private_message"]
secret_tree_access = ["mls-rs/secret_tree_access"]
export_key_generation = ["mls-rs/export_key_generation"]

[dependencies]
mls-rs = { path = "../mls-rs", version = "0.51.0", features = ["ffi"] }
mls-rs-crypto-openssl = { path = "../mls-rs-crypto-openssl", version = "0.18.0", optional = true }
mls-rs-identity-x509 = { path = "../mls-rs-identity-x509", version = "0.18.0", optional = true }
mls-rs-provider-sqlite = { path = "../mls-rs-provider-sqlite", version = "0.19.0", default-features = false, optional = true }
safer-ffi = { version = "0.1.7", default-features = false }
safer-ffi-gen = { version = "0.9.2", default-features = false }
