[package]
name = "mls-rs-provider-sqlite"
version = "0.9.0"
edition = "2021"
description = "SQLite based state storage for mls-rs"
homepage = "https://github.com/awslabs/mls-rs"
repository = "https://github.com/awslabs/mls-rs"
keywords = ["mls", "mls-rs"]
license = "Apache-2.0 OR MIT"

[dependencies]
mls-rs-core = { path = "../mls-rs-core", version = "0.16.0" }
thiserror = "1.0.40"
uuid = { version = "1.1", features = ["v4"] }
wasm-bindgen = { version = "0.2", optional = true }
zeroize = { version = "1", features = ["zeroize_derive"] }
rusqlite = { version = "0.30", default-features = false }
async-trait = "0.1"
rand = "0.8"
hex = { version = "0.4" }
maybe-async = "0.2.7"

[dev-dependencies]
tempfile = "3"
assert_matches = "1"
anyhow = "1"

[features]
default = ["sqlcipher-bundled"]

sqlite = ["rusqlite/modern_sqlite"]
sqlite-bundled = ["sqlite", "rusqlite/bundled"]
sqlcipher = ["sqlite", "rusqlite/sqlcipher"]
sqlcipher-bundled = ["sqlite", "rusqlite/bundled-sqlcipher"]
