[package]
name = "mls-rs-uniffi"
version = "0.12.0"
edition = "2021"
description = "An UniFFI-compatible implementation of Messaging Layer Security (RFC 9420)"
homepage = "https://github.com/awslabs/mls-rs"
repository = "https://github.com/awslabs/mls-rs"
keywords = ["mls", "e2ee", "uniffi"]
categories = ["cryptography"]
license = "Apache-2.0 OR MIT"
rust-version = "1.82.0"

[lib]
crate-type = ["lib", "cdylib"]
name = "mls_rs_uniffi"

[dependencies]
async-trait = "0.1.77"
maybe-async = "0.2.10"
mls-rs = { version = "0.53.0", path = "../mls-rs" }
mls-rs-core = { version = "0.26.0", path = "../mls-rs-core" }
mls-rs-crypto-openssl = { version = "0.20.0", path = "../mls-rs-crypto-openssl" }
thiserror = "2"
uniffi = { version = "0.31" }
zeroize = "1"

[target.'cfg(mls_build_async)'.dependencies]
tokio = { version = "1.36.0", features = ["sync"] }

[dev-dependencies]
uniffi_bindgen = { version = "0.31.0", features = ["bindgen-tests"] }
uniffi_testing = { version = "0.31.0" }
anyhow = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)'] }
