[package]
name = "harness_client"
version = "0.1.0"
authors = ["Marta Mularczyk <mulmarta@amazon.ch>"]
edition = "2021"

[dependencies]
aws-mls = { path = ".."}
tonic = "0.7"
prost = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "3", features = ["derive"] }
thiserror = "1"

[build-dependencies]
tonic-build = "0.7"
