[package]
name = "harness_client"
version = "0.1.0"
authors = ["Marta Mularczyk <mulmarta@amazon.ch>"]
edition = "2021"
publish = false

[dependencies]
aws-mls = { path = "..", features = ["benchmark"]}
tonic = "0.7"
prost = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "3", features = ["derive"] }
thiserror = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
aws-mls-crypto-rustcrypto = { path = "../../aws-mls-crypto-rustcrypto", features = ["browser"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
aws-mls-crypto-openssl = { path = "../../aws-mls-crypto-openssl"}

[build-dependencies]
tonic-build = "0.7"
