[package]
name = "test_utils"
version = "0.1.0"
authors = ["Marta Mularczyk <mulmarta@amazon.ch>"]
edition = "2021"
publish = false

[dependencies]
aws-mls = { path = ".." }
cfg-if = "1"
futures = "0.3.25"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "^1" }
hex = { version = "0.4", features = ["serde"] }
itertools = "0.10.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
aws-mls-crypto-rustcrypto = { path = "../../aws-mls-crypto-rustcrypto", features = ["browser"], version = "*" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
aws-mls-crypto-openssl = { path = "../../aws-mls-crypto-openssl", version = "*"}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
